syntax = "proto3";

package auth;

service authService {
    rpc authlogin(userData) returns (userData) {}
    rpc waitCallback(stream callbackData) returns (stream callbackData) {}
}

message userData {
    string id = 1;
    string name = 2;
    string email = 3;
    string username  = 4;
    string password = 5;
}

message callbackData {
    string id_callback = 1;
    userData user = 2;
}